--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Пример на bootstrap 4: Несколько примеров макетов сетки. Версия v4.0.0">
+    <meta name="description" content="Готовые обеды | OOO 'РУСДИВО'">
     <script src="https://kit.fontawesome.com/e30f1ff5b3.js" crossorigin="anonymous"></script>
     <meta name="author" content="">
     <link rel="icon" href="#">
